--- a/_posts/data-structures/2022-4-28-Vectors.md
+++ b/_posts/data-structures/2022-4-28-Vectors.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Data Structure
-published: false
+published: true
 ---
 
 Let's start this series on data structures with vectors. Or list? Or arrays?
@@ -25,5 +25,4 @@ It has the following properties:
 - fast access
 - occupies more memory than necessry
 
-How does it work? 
-We
+Let's see the declaration of the structure:
