--- a/_posts/data-structures/2022-4-28-Vectors.md
+++ b/_posts/data-structures/2022-4-28-Vectors.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Data Structure
-published: true
+title: Vectors
+published: false
 ---
 
 Let's start this series on data structures with vectors. Or list? Or arrays?
