--- a/_posts/data-structures/2022-4-28-Vectors.md
+++ b/_posts/data-structures/2022-4-28-Vectors.md
@@ -26,3 +26,11 @@ It has the following properties:
 - occupies more memory than necessry
 
 Let's see the declaration of the structure:
+```c
+struct vector
+{
+    size_t capacity;
+    size_t size;
+    void **data;
+};
+```
